Fix overflowing WYSIWYG editor images

--- a/less/prose-editor.less
+++ b/less/prose-editor.less
@@ -299,6 +299,7 @@ li.ProseMirror-selectednode:after {
 
 .ProseMirror-example-setup-style img {
 	cursor: default;
+	max-width: 100%;
 }
 
 .ProseMirror-prompt {
